tolk-tester/tests/invalid-syntax/err-3613.tolk
/**
@compilation_should_fail
@stderr expected top-level declaration, got `123`
*/

fun main() {}
// no new line in the end of file
123